fixed photo gallery spacing

--- a/src/Components/PopularActivities.module.css
+++ b/src/Components/PopularActivities.module.css
@@ -2,6 +2,7 @@
 .container {
     width: 75%;
     margin: auto;
+    padding: 5rem  0;
     text-align: center;
   }
   
